--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,82 @@
-# This is a basic workflow to help you get started with Actions
+before_script:
+  - $env:BDS="C:\Program Files (x86)\Embarcadero\Studio\17.0"
+  - $env:BDSINCLUDE="C:\Program Files (x86)\Embarcadero\Studio\17.0\Include"
+  - $env:BDSCOMMONDIR="C:\Users\Public\Documents\Embarcadero\Studio"
+  - $env:FrameworkDir="C:\Windows\Microsoft.NET\Framework\v3.5"
+  - $env:FrameworkVersion=""
+  - $env:PATH=$env:FrameworkDir;"$env:BDS\bin";$env:PATH
+  - $env:LANGDIR="EN"
+  - $env:PLATFORM=""
+  - $env:PlatformSDK=""
+  
+stages:
+  - test  
+  - analyze
+  - build
+  - deploy  
+  
+  
+test:
+  stage: test
+  
+  variables:
+    ArtifactPath: 'src\Test\'
+    ArtifactName: 'DelphiCITests'
+    
+  script:
+  - echo building test project...
+  - C:\Windows\Microsoft.NET\Framework64\v3.5\msbuild.exe /m /nologo $env:ArtifactPath$env:ArtifactName.dproj /target:Build /p:DCC_BuildAllUnits=true /p:"Config=Release" /p:"Platform=Win32"
+  #- Invoke-Item .\$env:ArtifactPath$env:ArtifactName.exe
+  - echo running tests...
+  - .\src\Test\DelphiCITests.exe
+  # Coverage report > dunitx-results.xml
+  
+  
+analyze:
+  stage: analyze
+  
+  variables:
+    SonarScanner: 'C:\Docker\sonar-scanner-3.2\bin\sonar-scanner.bat'
+    
+  script:
+  - echo analizing code...
+  - C:\Docker\sonar-scanner-3.2\bin\sonar-scanner.bat  
+  
 
-name: CI
+build:
+  stage: build
 
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  variables:
+    ArtifactPath: 'src\'
+    ArtifactName: 'DelphiCI'
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  script:
+  - echo building project...
+  - C:\Windows\Microsoft.NET\Framework64\v3.5\msbuild.exe /m /nologo $env:ArtifactPath$env:ArtifactName.dproj /target:Build /p:DCC_BuildAllUnits=true /p:"Config=Release" /p:"Platform=Win32"
+  
+  artifacts:
+    name: "$env:CI_PROJECT_NAME-$env:CI_JOB_ID"
+    paths:
+      - bin\\"$env:ArtifactName".exe   
+    when: always
+    expire_in: 2 week
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+deploy:
+  stage: deploy
+  
+  variables:
+    ArtifactName: 'DelphiCI'
+    
+  dependencies:
+    - build
+    
+  script:
+  - echo deploying project...  
+  - Compress-Archive bin\\"$env:ArtifactName".exe bin\\"$env:ArtifactName".zip
+  - $password = ConvertTo-SecureString -AsPlainText -Force -String 'AP7dyPrVGx4M2Aq9GaTc8tFqqTT'
+  - $cred = New-Object Management.Automation.PSCredential ('admin', $password)
+  - $ARTIFACT_SHA1_CHECKSUM=$(Get-FileHash -Algorithm SHA1 bin\\"$env:ArtifactName".zip).Hash
+  - $HEADERS = @{"X-Checksum-SHA1"=$ARTIFACT_SHA1_CHECKSUM;};
+  - Invoke-RestMethod -Uri http://10.0.75.1:9700/artifactory/generic-local/build/$env:CI_PROJECT_NAME/$env:CI_JOB_ID/$env:ArtifactName.zip -InFile $env:ArtifactName.zip -Method PUT -Credential $cred 
+  
